# vr.agent

./: .gitignore  .hgtags  .travis.yml  CHANGES.rst  README.rst  README.txt  conftest.py  setup.cfg  setup.py  tox.ini
agent/: setup.py
docs/: conf.py  index.rst
vr/agent/: __init__.py  publisher.py  rpc.py  supervisor_utils.py
vr/agent/tests/: test_publisher.py
