[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = vr.agent
author = Brent Tubbs
author_email = brent.tubbs@gmail.com
description = Velociraptor plugins to Supervisord.
long_description = file:README.rst
url = https://github.com/yougov/vr.agent
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3

[options]
packages = find:
namespace_packages = vr
include_package_data = true
python_requires = >=2.7
install_requires =
	PyYAML>=3.10
	redis>=2.6.2
	requests>=1.0.4
	supervisor; python_version=="2.7"
	vr.common>=2.15.2,<6
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local
	backports.unittest_mock

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	proc_publisher = vr.agent.publisher:main
